k8s/bobs-archiv-landing-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bobs-archiv-landing-page
spec:
  selector:
    app: bobs-archiv-landing-page
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
