k8s/bobs-archiv-landing-page-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bobs-archiv-landing-page-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bobs-archiv.jannekeipert.de
      secretName: multi-domain-cert
  rules:
    - host: bobs-archiv.jannekeipert.de
      http:
        paths:
          - backend:
              service:
                name: bobs-archiv-landing-page
                port:
                  number: 80
            path: /
            pathType: Prefix
